deploy-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-info-svc
spec:
  selector:
    app: pod-info
  ports:
  - port: 3000
    targetPort: 3000
