deploy-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-info-ingress
  labels:
    name: pod-info-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/info"
        backend:
          service:
            name: pod-info-svc
            port: 
              number: 3000
